# app/Http/Resources/JobListResource.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class JobListResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->title,
+            'location' => $this->location,
+            'salary_min' => number_format($this->salary_min, 2, '.', ''),
+            'salary_max' => number_format($this->salary_max, 2, '.', ''),
+            'company'     => [
+                'id'   => $this->company->id,
+                'name' => $this->company->name,
+            ],
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+        ];
+    }
+}
