# routes/api/V1-api.php
@@ -1,6 +1,8 @@
 <?php
 
 use App\Http\Controllers\Api\Company\JobPostController;
+use App\Http\Controllers\Applicant\ApplicationController;
+use App\Http\Controllers\Applicant\JobListController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\RegisterController;
@@ -20,7 +22,20 @@ Route::prefix('auth')->group(function () {
 
 //protected routes
 
-Route::middleware(['auth:sanctum'])->prefix('v1/company')->group(function () {
-    Route::apiResource('job-postings', JobPostController::class);
-    Route::post('job-postings/{jobPosting}/toggle', [JobPostController::class, 'toggle']);
+Route::middleware(['auth:sanctum'])->group(function() {
+
+    //company job postings
+    Route::prefix('company')->group(function () {
+        Route::apiResource('job-postings', JobPostController::class);
+        // Route::post('job-postings/{jobPosting}/toggle', [JobPostController::class, 'toggle']);
+
+
+    });
+
+    Route::prefix('user')->group(function () {
+        Route::apiResource('job-listings', JobListController::class);
+        Route::apiResource('job-applications', ApplicationController::class);
+    });
+
 });
+
